配置formidable处理有文件的上传请求

--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -4,9 +4,9 @@
             <div class="profile">
                 <!-- 头像 -->
                 <div class="avatar img-circle">
-                    <img src="/public/uploads/avatar.jpg">
+                    <img src="/public/images/monkey.png">
                 </div>
-                <h4>布头儿</h4>
+                <h4>大头儿</h4>
             </div>
             <!-- 导航菜单 -->
             <div class="navs">
